--- a/public/pages/blog.html
+++ b/public/pages/blog.html
@@ -45,13 +45,13 @@
     </div>
   </header>
 
-  <div class="posts-container">
-    <div id="loadSpinner" style="height: 100%; display: none; justify-content: center; align-items: center;">
-      <div class="spinner-border text-dark" role="status" style="margin-top: 4px;">
-        <span class="sr-only">Loading...</span>
-      </div>
+  <div id="loadSpinner" style="height: 100%; display: none; justify-content: center; align-items: center;">
+    <div class="spinner-border text-dark" role="status" style="margin-top: 4px;">
+      <span class="sr-only">Loading...</span>
     </div>
+  </div>
 
+  <div id="postsContainer" style="display: none;">
     <div class="division">
       <div class="description">
         <h6>Blog</h6>
