--- a/public/pages/blog-managment.html
+++ b/public/pages/blog-managment.html
@@ -61,6 +61,12 @@
         <h6>Gerencie seus posts aqui.</h6>
       </div>
 
+      <div class="search-container" style="padding: 16px;">
+        <input id="searchInput" type="text">
+        <button onclick="searchPosts()">Pesquisar</button>
+        <button style="display: none;" id="deleteSeachButton" onclick="deleteSearch()">Limpar</button>
+      </div>
+
       <div id="loadSpinner" style="height: 100%; display: none; justify-content: center; align-items: center;">
         <div class="spinner-border text-dark" role="status" style="margin-top: 4px;">
           <span class="sr-only">Loading...</span>
