--- a/public/pages/blog.html
+++ b/public/pages/blog.html
@@ -72,6 +72,12 @@
       <h5>Explore nossas dicas e tendências sobre vasos decorativos.</h5>
     </div>
 
+    <div class="search-container" style="padding: 16px;">
+      <input id="searchInput" type="text">
+      <button onclick="searchPosts()">Pesquisar</button>
+      <button style="display: none;" id="deleteSeachButton" onclick="deleteSearch()">Limpar</button>
+    </div>
+
     <div id="posts-content"> </div>
   </div>
 
