--- a/public/pages/users-managment.html
+++ b/public/pages/users-managment.html
@@ -56,7 +56,7 @@
             <h6>Listagem de todos os usuários</h6>
         </div>
 
-        <div class="serach-container">
+        <div class="search-container">
             <input id="searchInput" type="text">
             <button onclick="searchUser()">Pesquisar</button>
             <button style="display: none;" id="deleteSeachButton" onclick="deleteSearch()">Limpar</button>
