Upload de múltiplas imagens

--- a/public/pages/blog-managment.html
+++ b/public/pages/blog-managment.html
@@ -152,7 +152,7 @@
             </div>
 
             <label for="image" id="imageLabel">Imagem do post *</label>
-            <input class="w-100" id="postImageInput" name="image" type="file" onchange="readFile(this)">
+            <input class="w-100" id="postImageInput" name="images[]" type="file" accept="image/*" multiple onchange="readFile(this)">
           </form>
         </div>
         <div class="modal-footer border-0">
