--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,10 @@
         </div>
       </div>
     </section>
+    
+    <section class="s4" id="invitationSession">
+      
+    </section>
 
     <section section class="s3">
       <div>
@@ -107,7 +111,7 @@
         </div>
       </div>
 
-      <section section class="contact-container">
+      <div section class="contact-container">
         <div>
           <h3>Fale conosco pelo WhatsApp</h3>
           <h6>Não perca tempo! Entre em contato hoje mesmo para mais informações ou compras.</h6>
@@ -116,7 +120,7 @@
           <a href="https://wa.me/5531998331936"> <button class="cta-button1">Contato</button> </a>
           <a href="https://www.instagram.com/afloravasos"> <button class="cta-button22">Saiba Mais</button> </a>
         </div>
-      </section>
+      </div>
     </section>
 
     <section section class="s5">
@@ -177,6 +181,15 @@
       </div>
     </div>
   </footer>
+
+  <!-- Toast -->
+  <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-body">
+        Código de convite copiado para a área de transferência
+      </div>
+    </div>
+  </div>
 
   <!-- Sign In/Sign Up modal -->
   <div class="modal fade" id="loginModal" aria-hidden="true" aria-labelledby="loginModalLabel" tabindex="-1">
