Configuração de rotas

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
           </a>
   
           <ul class="dropdown-menu">
-            <li> <a class="dropdown-item" href="/pages/products.html">Produtos</a> </li>
-            <li> <a class="dropdown-item" href="/pages/blog.html">Blog</a> </li>
+            <li> <a class="dropdown-item" href="/produtos">Produtos</a> </li>
+            <li> <a class="dropdown-item" href="/blog">Blog</a> </li>
           </ul>
         </div>
       </div>
@@ -39,8 +39,8 @@
 
     <div id="logged-content" class="header-right-content">
       <div class="large-screen-header">
-        <h5><a href="/pages/products.html">Produtos</a></h5>
-        <h5><a href="/pages/blog.html">Blog</a></h5>
+        <h5><a href="/produtos">Produtos</a></h5>
+        <h5><a href="/blog">Blog</a></h5>
       </div>
     </div>
   </header>
