--- a/public/pages/post.html
+++ b/public/pages/post.html
@@ -28,8 +28,8 @@
           </a>
 
           <ul class="dropdown-menu">
-            <li> <a class="dropdown-item" href="/pages/products.html">Produtos</a> </li>
-            <li> <a class="dropdown-item" href="/pages/blog.html">Blog</a> </li>
+            <li> <a class="dropdown-item" href="/produtos">Produtos</a> </li>
+            <li> <a class="dropdown-item" href="/blog">Blog</a> </li>
           </ul>
         </div>
       </div>
@@ -39,8 +39,8 @@
 
     <div id="logged-content" class="header-right-content">
       <div class="large-screen-header">
-        <h5><a href="/pages/products.html">Produtos</a></h5>
-        <h5><a href="/pages/blog.html">Blog</a></h5>
+        <h5><a href="/produtos">Produtos</a></h5>
+        <h5><a href="/blog">Blog</a></h5>
       </div>
     </div>
   </header>
@@ -55,7 +55,7 @@
     <div id="post-header">
       <div class="division">
         <div class="description">
-          <a href="/pages/blog.html">
+          <a href="/blog">
             <div>
               <i class="fa fa-arrow-left"></i>
               <span>Ver tudo</span>
