Preparação apra apresentação

--- a/public/pages/products.html
+++ b/public/pages/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/x-icon" href="assets/images/logo-1.png" />
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png" />
 
     <link
       rel="stylesheet"
@@ -75,7 +75,7 @@
         <div style="height: 1px; border: 1px solid black; margin: 24px 0;"></div>
 
         <div class="footer-container">
-            <img style="height: 124px;" src="../assets/images/logo-1.png" alt="Logo Aflorá">
+            <img style="height: 124px;" src="../assets/images/logo.png" alt="Logo Aflorá">
 
             <div class="footer-info">
                 <div class="footer-social-network">
