--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/x-icon" href="assets/images/logo-1.png" />
+  <link rel="icon" type="image/x-icon" href="assets/images/logo.png" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -70,7 +70,7 @@
 
       <div class="carousel-images">
         <div class="carousel-home-item">
-          <img src="assets/images/home-image-1.png" alt="Home image 1">
+          <img src="assets/images/produto-1.png" alt="Home image 1">
           <div class="p-3">
             <h4>Feito à mão, com carinho e cuidado.</h4>
             <h6>Cada vaso é único, moldado com as mãos de quem ama a cerâmica.</h6>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="carousel-home-item">
-          <img src="assets/images/home-image-2.png" alt="Home image 2">
+          <img src="assets/images/produto-2.png" alt="Home image 2">
           <div class="p-3">
             <h4>Materiais naturais, para um futuro sustentável.</h4>
             <h6>Utilizamos apenas materiais sustentáveis para criar beleza.</h6>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="carousel-home-item">
-          <img src="assets/images/home-image-3.png" alt="Home image 3">
+          <img src="assets/images/produto-3.png" alt="Home image 3">
           <div class="p-3">
             <h4>Designs únicos para todos os estilos.</h4>
             <h6>Encontre o vaso perfeito para complementar sua decoração.</h6>
@@ -167,7 +167,7 @@
     <div style="height: 1px; border: 1px solid black; margin: 24px 0;"></div>
 
     <div class="footer-container">
-      <img style="height: 124px;" src="assets/images/logo-1.png" alt="Logo Aflorá">
+      <img style="height: 124px;" src="assets/images/logo.png" alt="Logo Aflorá">
 
       <div class="footer-info">
         <div class="footer-social-network">
