--- a/public/pages/post.html
+++ b/public/pages/post.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/x-icon" href="../assets/images/logo-1.png" />
+  <link rel="icon" type="image/x-icon" href="../assets/images/logo.png" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -67,7 +67,7 @@
           <h3 id="post-description"></h3>
         </div>
         <div class="image">
-          <div id="imagesCarousel" class="carousel carousel-fade" data-bs-ride="false">
+          <div id="imagesCarousel" class="carousel carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner" id="carousel-post-images"></div>
 
             <button class="carousel-control-prev" type="button" data-bs-target="#imagesCarousel" data-bs-slide="prev">
@@ -110,7 +110,7 @@
     <div style="height: 1px; border: 1px solid black; margin: 24px 0;"></div>
 
     <div class="footer-container">
-      <img style="height: 124px;" src="../assets/images/logo-1.png" alt="Logo Aflorá">
+      <img style="height: 124px;" src="../assets/images/logo.png" alt="Logo Aflorá">
 
       <div class="footer-info">
         <div class="footer-social-network">
