Filtrar apenas inscritos na newsletters

--- a/public/pages/users-managment.html
+++ b/public/pages/users-managment.html
@@ -62,6 +62,11 @@
             <button style="display: none;" id="deleteSeachButton" onclick="deleteSearch()">Limpar</button>
         </div>
 
+        <div class="my-4 onlyNewsletters-container">
+            <label for="onlyNewsletters" class="m-0">Apenas inscritos na newsletters: </label>
+            <input name="onlyNewsletters" type="checkbox" id="onlyNewslettersButton" onclick="searchUser()">
+        </div>
+
         <div class="users-list-container">
             <h3>Clientes</h3>
 
